# hand_gesture_tower_battle

./: .gitignore  README.md  Untitled.ipynb  arcadeg.py  cvtest.py  game.py  gazou.py  openCVgame.py  otehon.py  pyproject.toml  pytagora.py  train_seg.ipynb
